tests/NormalTests/paczka1/fuzzy1/73040316.err
Error in line 19: Aqi51BgE7 S380 97,4
Error in line 22: I6u6hoX A23 78,2
Error in line 26: I6u6hoX A253 271,4
Error in line 14: t7NRA A117 173,3
Error in line 35: Aqi51BgE7 A253 77,21
